fix:[PD-1578] cart timer overlapping

--- a/src/component/ProductItem/ProductItem.style.scss
+++ b/src/component/ProductItem/ProductItem.style.scss
@@ -424,6 +424,11 @@
     .CountdownTimer{
       padding-top: 6px;
       float: left;
+      .DynamicContentCountDownTimer{
+        @include desktop{
+          margin-bottom: 5px;
+        }
+      }
     }
     .CountdownTimerArabic{
       padding-top: 6px;
